# docs/swagger.yaml
@@ -1,5 +1,19 @@
 basePath: /api
 definitions:
+  handlers.ChecklistDto:
+    properties:
+      items:
+        items:
+          properties:
+            completed:
+              type: boolean
+            title:
+              type: string
+          type: object
+        type: array
+      title:
+        type: string
+    type: object
   handlers.CreateBoardReqest:
     properties:
       name:
@@ -31,6 +45,54 @@ definitions:
         type: string
       order_num:
         type: integer
+      updated_at:
+        type: string
+    type: object
+  handlers.CreateTaskRequest:
+    properties:
+      board_id:
+        type: string
+      checklists:
+        items:
+          $ref: '#/definitions/handlers.ChecklistDto'
+        type: array
+      column_id:
+        type: string
+      description:
+        type: string
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+    type: object
+  handlers.CreateTaskResponse:
+    properties:
+      board_id:
+        type: string
+      checklists:
+        items:
+          $ref: '#/definitions/handlers.ChecklistDto'
+        type: array
+      column_id:
+        type: string
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      number:
+        type: integer
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
       updated_at:
         type: string
     type: object
@@ -142,6 +204,47 @@ paths:
       summary: Создание новой колонки
       tags:
       - Columns
+  /v1/tasks:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request на создание таски
+        in: body
+        name: createTaskRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CreateTaskRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handlers.CreateTaskResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Создание новой задачи
+      tags:
+      - Tasks
 securityDefinitions:
   BasicAuth:
     type: basic
